--- a/.github/workflows/submit.yml
+++ b/.github/workflows/submit.yml
@@ -34,6 +34,8 @@ jobs:
             pip install --upgrade copulas
             pip install matplotlib
       - name: Create data in timestamp2
+        env:
+          COMBAL_MAMMAL: ${{ secrets.COMBAL_MAMMAL }}
         run: |
           python fit.py
      
