--- a/.github/workflows/submit.yml
+++ b/.github/workflows/submit.yml
@@ -5,7 +5,7 @@ on:
     # How often do you want to fit your model? 
     # Public github accounts get 2000 minutes / month 
     # * is a special character in YAML so you have to quote this string
-    - cron:  '*/30 * * * *'
+    - cron:  '1 * * * *'
 
 defaults:
   run:
